First version with redis cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+#spring.data.mongodb.uri=mongodb://admin:123qwerty@ds135107.mlab.com:35107/range_problem
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=range_problem
+mongodb.connections=500
+#redis config
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
