--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,8 +14,7 @@ services:
     ports:
       - 27017:27017
 
-# only for db init
-#  mongo_import:
-#    build: ./dump
-#    links:
-#      - mongodb
+  mongo_import:
+    build: ./dump
+    links:
+      - mongodb
